test/types/records/split-init/error-never-initialized-values-mentioned4.good
error-never-initialized-values-mentioned4.chpl:3: In function 'error':
error-never-initialized-values-mentioned4.chpl:7: error: the type of the actual argument 'q2' is generic
note: generic actual arguments are not currently supported
error-never-initialized-values-mentioned4.chpl:7: note: 'C?' now means nilable class with any management
error-never-initialized-values-mentioned4.chpl:7: note: to migrate old code, change it to 'borrowed C?'
